--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.2.2",
+		"localforage": "^1.10.0",
+		"match-sorter": "^6.3.4",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.0.1",
 		"react-redux": "^9.1.0",
-		"redux-logger": "^3.0.6"
+		"react-router-dom": "^6.22.3",
+		"redux-logger": "^3.0.6",
+		"sort-by": "^1.2.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
