--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -2,6 +2,7 @@
 	"arrowParens": "always",
 	"bracketSameLine": false,
 	"semi": false,
+	"bracketSpacing": false,
 	"experimentalTernaries": false,
 	"singleQuote": false,
 	"jsxSingleQuote": false,
