--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -3,7 +3,7 @@
 	"bracketSameLine": false,
 	"semi": false,
 	"bracketSpacing": false,
-	"experimentalTernaries": false,
+	"experimentalTernaries": true,
 	"singleQuote": false,
 	"jsxSingleQuote": false,
 	"quoteProps": "as-needed",
