--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.3",
 		"redux-logger": "^3.0.6",
-		"sort-by": "^1.2.0"
+		"sort-by": "^1.2.0",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
