--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-router-dom": "^6.22.3",
 		"redux-logger": "^3.0.6",
 		"sort-by": "^1.2.0",
+		"tailwind-scrollbar-hide": "^1.1.7",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
