--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,23 +12,23 @@
 		"uuidv"
 	],
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#1a1a1a",
-		"activityBar.background": "#1a1a1a",
+		"activityBar.activeBackground": "#3e4451",
+		"activityBar.background": "#3e4451",
 		"activityBar.foreground": "#e7e7e7",
 		"activityBar.inactiveForeground": "#e7e7e799",
-		"activityBarBadge.background": "#606020",
+		"activityBarBadge.background": "#000000",
 		"activityBarBadge.foreground": "#e7e7e7",
 		"commandCenter.border": "#e7e7e799",
-		"sash.hoverBorder": "#1a1a1a",
-		"statusBar.background": "#000000",
+		"sash.hoverBorder": "#3e4451",
+		"statusBar.background": "#282c34",
 		"statusBar.foreground": "#e7e7e7",
-		"statusBarItem.hoverBackground": "#1a1a1a",
-		"statusBarItem.remoteBackground": "#000000",
+		"statusBarItem.hoverBackground": "#3e4451",
+		"statusBarItem.remoteBackground": "#282c34",
 		"statusBarItem.remoteForeground": "#e7e7e7",
-		"titleBar.activeBackground": "#000000",
+		"titleBar.activeBackground": "#282c34",
 		"titleBar.activeForeground": "#e7e7e7",
-		"titleBar.inactiveBackground": "#00000099",
+		"titleBar.inactiveBackground": "#282c3499",
 		"titleBar.inactiveForeground": "#e7e7e799"
 	},
-	"peacock.color": "#000000"
+	"peacock.color": "#282c34"
 }
